k8s/1.21/ingress_extensions_v1beta1.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tom-jerry-ingress-ext-beta
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /jerry
          backend:
            serviceName: jerry-service
            servicePort: 8080
        - path: /tom
          backend:
            serviceName: tom-service
            servicePort: 8080
