k8s/1.21/ingress_networking_v1.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tom-jerry-ingress-ntw-v1
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /jerry
          pathType: Exact
          backend:
                  service:
                      name: jerry-service
                      port:
                        number: 8080
        - path: /tom
          pathType: Prefix
          backend:
                  service:
                      name: tom-service
                      port: 
                        number: 8080
        - path: /spike
          pathType: ImplementationSpecific
          backend:
                  service:
                      name: spike-service
                      port: 
                        number: 8080
